Fix long facet overlap issue

--- a/primo-explore/custom/CUHK/scss/_primo-explore-cuhk-theme.scss
+++ b/primo-explore/custom/CUHK/scss/_primo-explore-cuhk-theme.scss
@@ -303,7 +303,6 @@ prm-search-result-list .results-title:not(.results-title-favorites) {
 }
 
 prm-facet-group .md-chips .md-chip {
-    height: 22px !important;
     line-height: 22px !important;
 }
 
